--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#0f9d58</color>
     <color name="colorPrimaryDark">#0c7e46</color>
     <color name="colorAccent">#FF9800</color>
+    <color name="white">#ffffff</color>
 </resources>
