--- a/app/src/main/res/layout/single_app_layout.xml
+++ b/app/src/main/res/layout/single_app_layout.xml
@@ -49,7 +49,7 @@
 
 
             <TextView
-                android:id="@+id/ratong"
+                android:id="@+id/rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
