--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#0c7e46</color>
     <color name="colorAccent">#FF9800</color>
     <color name="white">#ffffff</color>
-    <color name="grey">#EEEEEE</color>
+    <color name="grey">#E5E5E5</color>
 </resources>
