--- a/app/src/main/res/layout/single_app_layout.xml
+++ b/app/src/main/res/layout/single_app_layout.xml
@@ -18,10 +18,11 @@
         <ImageView
             android:id="@+id/app_image"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="90dp"
             android:layout_weight="1.5"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="4dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/ic_instagram" />
 
         <LinearLayout
