--- a/app/src/main/res/layout/single_app_layout.xml
+++ b/app/src/main/res/layout/single_app_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="8dp"
@@ -20,8 +21,8 @@
             android:layout_width="0dp"
             android:layout_height="90dp"
             android:layout_weight="1.5"
-            android:paddingTop="12dp"
             android:paddingBottom="4dp"
+            android:paddingTop="12dp"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_instagram" />
 
@@ -69,18 +70,24 @@
 
             <ImageView
                 android:id="@+id/download"
-                android:src="@drawable/ic_down_arrow"
                 android:layout_width="match_parent"
                 android:layout_height="64dp"
-                android:paddingRight="8dp"
-                android:layout_gravity="center" />
-
-            <ProgressBar
-                android:id="@+id/download_progress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:visibility="gone" />
+                android:paddingRight="8dp"
+                android:src="@drawable/ic_down_arrow"
+                android:visibility="visible" />
+
+            <com.github.lzyzsd.circleprogress.DonutProgress
+                android:id="@+id/download_progress"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:visibility="gone"
+                android:layout_gravity="center"
+                app:donut_finished_stroke_width="5dp"
+                app:donut_unfinished_stroke_width="2dp"
+                app:donut_finished_color="?attr/colorAccent"
+                app:donut_show_text="false"
+                custom:donut_progress="0" />
 
         </FrameLayout>
 
